--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/style.css')
-    script(src='http://localhost:35729/livereload.js')
-    script(src='http://code.jquery.com/jquery-2.0.3.js')
-    script(src='/js/byteParser.js')
+    //- script(src='http://localhost:35729/livereload.js')
+    //- script(src='http://code.jquery.com/jquery-2.0.3.js')
+    script(src='http://d3js.org/d3.v3.min.js', charset='utf-8')
+    //- script(src='/js/byteParser.js')
     script(src='/js/midi.js')
     script(src='/js/midi-loader.js')
   body
