canned animation proof-of-concept

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,10 @@
 body {
-  padding: 50px;
+  padding: 0;
+  margin: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+circle {
+   xfill: red;
 }
+
