try a more measured approach at setting up timing and integrating midi ticks

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html
     script(src='http://d3js.org/d3.v3.min.js', charset='utf-8')
     //- script(src='/js/byteParser.js')
     script(src='/js/midi.js')
-    script(src='/js/midi-loader.js')
+    //- script(src='/js/midi-loader.js')
+    script(src='/js/timing-test.js')
   body
     block content
