--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/style.css')
-    script(src='http://d3js.org/d3.v3.min.js', charset='utf-8')
+    // script(src='http://d3js.org/d3.v3.min.js', charset='utf-8')
     script(src='http://underscorejs.org/underscore-min.js', charset='utf-8')
     script(src='/js/midi.js')
+    script(src='/js/audio-player.js')
   body
     block content
     script(src='/js/timing-test.js')
