very rudimentary rendering pipeline

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     script(src='http://underscorejs.org/underscore-min.js', charset='utf-8')
     script(src='/js/audio-player.js')
     script(src='/js/midi.js')
+    script(src='/js/midi-visualizer-pipeline.js')
     script(src='/js/midi-visualizer.js')
   body
     block content
