start of testing and utility for easier module creation

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/css/style.css')
     // script(src='http://d3js.org/d3.v3.min.js', charset='utf-8')
     script(src='http://underscorejs.org/underscore-min.js', charset='utf-8')
+    script(src='/js/utils/js')
     script(src='/js/audio-player.js')
     script(src='/js/midi.js')
     script(src='/js/midi-visualizer-pipeline.js')
