--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,17 @@ body {
   padding: 0;
   margin: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
-svg: {
+svg {
    width: 100%;
    height: 100%;
+}
+
+circle {
+   opacity: 0.5;
 }
 
 .track {
