--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,10 @@
 body {
-  padding: 0;
-  margin: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  width: 100%;
-  height: 100%;
+   padding: 0;
+   margin: 0;
+   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+   width: 100%;
+   height: 100%;
+   background-color: hsl(60, 80%, 80%);
 }
 
 svg {
