started into jsdocs

--- a/jsdoc.template.hbs
+++ b/jsdoc.template.hbs
@@ -4,4 +4,4 @@ A simple, functional-based midi visualization library
 
 ## API Reference
 
-TODO: link in jsdoc
+{{#module name="RenderUtils"}}{{>docs}}{{/module}}
