data-type documentation

--- a/jsdoc.template.hbs
+++ b/jsdoc.template.hbs
@@ -5,3 +5,5 @@ A simple, functional-based midi visualization library
 ## API Reference
 
 {{#module name="RenderUtils"}}{{>docs}}{{/module}}
+
+{{#module name="DataTypes"}}{{>docs}}{{/module}}
