added documenation for AudioPlayer

--- a/jsdoc.template.hbs
+++ b/jsdoc.template.hbs
@@ -7,3 +7,5 @@ A simple, functional-based midi visualization library
 {{#module name="RenderUtils"}}{{>docs}}{{/module}}
 
 {{#module name="DataTypes"}}{{>docs}}{{/module}}
+
+{{#class name="AudioPlayer"}}{{>docs}}{{/class}}
