almost done with the documentation...

--- a/jsdoc.template.hbs
+++ b/jsdoc.template.hbs
@@ -6,6 +6,12 @@ A simple, functional-based midi visualization library
 
 {{#module name="RenderUtils"}}{{>docs}}{{/module}}
 
+{{#module name="ThreeJsRenderer"}}{{>docs}}{{/module}}
+
+{{#module name="D3Renderer"}}{{>docs}}{{/module}}
+
 {{#module name="DataTypes"}}{{>docs}}{{/module}}
 
 {{#class name="AudioPlayer"}}{{>docs}}{{/class}}
+
+{{#namespace name="midi-visualizer"}}{{>docs}}{{/namespace}}
