--- a/jsdoc.template.hbs
+++ b/jsdoc.template.hbs
@@ -2,7 +2,32 @@
 
 A simple, functional-based midi visualization library
 
+## Example
+
+  const initMidiVisualizer = import 'midi-visualizer';
+  const config = {
+    window: window,
+    root: document.getElementById('#my-root'),
+    width: 500,
+    height: 500,
+    midi: {
+      data: myFnToFetchMidiData()
+    },
+    audio: {
+      data: myFnToFetchAudioData()
+    }
+  };
+
+  initMidiVisualizer(config).then((visualizer) => {
+    const playingVisualizer = visualizer.play();
+    // all your other fun operations...
+  }).catch((error) => console.error('Oh man, something bad happened:', error));
+
 ## API Reference
+
+{{#module name="midiVisualizer"}}{{>docs}}{{/module}}
+
+{{#namespace name="midi-visualizer"}}{{>docs}}{{/namespace}}
 
 {{#module name="RenderUtils"}}{{>docs}}{{/module}}
 
@@ -10,8 +35,6 @@ A simple, functional-based midi visualization library
 
 {{#module name="D3Renderer"}}{{>docs}}{{/module}}
 
-{{#module name="DataTypes"}}{{>docs}}{{/module}}
-
 {{#class name="AudioPlayer"}}{{>docs}}{{/class}}
 
-{{#namespace name="midi-visualizer"}}{{>docs}}{{/namespace}}
+{{#module name="DataTypes"}}{{>docs}}{{/module}}
