add build badge

--- a/jsdoc.template.hbs
+++ b/jsdoc.template.hbs
@@ -1,4 +1,6 @@
 # midi-visualizer
+#
+[![Build Status](https://travis-ci.org/edhille/midi-visualizer.svg?branch=master)](https://travis-ci.org/edhille/midi-visualizer)
 
 A simple, functional-based midi visualization library
 
